fixed text out of bounds on  transition problem

--- a/public/stylesheets/widget-styles.less
+++ b/public/stylesheets/widget-styles.less
@@ -135,15 +135,16 @@ body, html {
   text-align: center;
   width: 100%;
   height: 100%;
-  display: table;
+  display: flex;
+  align-items: center;
   padding: 0 15px;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .rSlides p {
-  vertical-align: middle;
   text-align: center;
-  display: table-cell;
+  width: 100%;
   white-space: pre-wrap;
   margin: 0;
 }
